# eduweb

./: .gitignore  README.md  pyproject.toml
src/eduweb/: catat_keuangan.py  djangoserver.py  fastapiserver.py  flaskserver.py  help.py  kalkulator.py  logi_ifelse.py  main.py  rawserver.py  socketifyserver.py
