[project]
name = "eduweb"
version = "0.1.0"
description = "Education Web Dev"
authors = [
    {name = "Muhammad Syarifudin", email = "muhammad.el.syarifudin@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
